...
            VStack(spacing: 20) {
            Text("Create Account")
                .font(.largeTitle)
                .fontWeight(.bold)
                .padding(.bottom, 20)
            
            TextField("Email", text: $email)
#if os(iOS)
                .keyboardType(.emailAddress)
                .textInputAutocapitalization(.never)
#endif
                .padding()
                .background(Color.secondarySystemGroupedBackground)
                .cornerRadius(10)
            
            SecureField("Password", text: $password)
                .padding()
                .background(Color.secondarySystemGroupedBackground)
                .cornerRadius(10)
            
            SecureField("Confirm Password", text: $confirmPassword)
                .padding()
...
